// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChromeNavItem should render navigation  1`] = `
<div>
  <div
    class="chr-c-app-title"
  >
    Nav title
  </div>
  <nav
    aria-label="Insights Global Navigation"
    class="pf-c-nav pf-m-scrollable"
    data-ouia-component-id="SideNavigation"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-c-nav__list"
    />
  </nav>
</div>
`;

exports[`ChromeNavItem should render navigation loader if schema was not loaded 1`] = `
<div>
  <section
    class="chr-c-app-switcher--loading"
  >
    <div
      class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__lg ins-m-dark"
    >
      <span
        class="pf-u-screen-reader"
      />
    </div>
  </section>
  <nav
    aria-label="Insights Global Navigation"
    class="pf-c-nav"
    data-ouia-component-id="SideNavigation"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe="false"
  >
    <ul
      class="pf-c-nav__list"
    >
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-1"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          href="#"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__lg ins-m-dark"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-2"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          href="#"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__lg ins-m-dark"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-3"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          href="#"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__lg ins-m-dark"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-4"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          href="#"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__lg ins-m-dark"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
